--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>CARAVAN</title>
     <%= csrf_meta_tags %>
+    <script src="https://kit.fontawesome.com/7cacd7c5e5.js" crossorigin="anonymous"></script>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
