--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -41,6 +41,7 @@
     <h2 class="blog-heading">Recent Blogs</h2>
     <div class="blog-box">
       <% @blogs.each do |blog| %>
+        <% binding.pry %>exit
         <div class="blog-item">
           <div class="blog-image"><%= image_tag('img/forest.jpg', class: 'blog-image') %></div>
           <section class="blog-text">
